@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

'title Domain Model

class MusgoSublime {
}
class FleetManager {
    name
    bornDate
    admDate
    address
    phoneNumber
    email
    idCard
    idNumber
}

class Vehicle {
    brand
    model
    type
    tare
    grossWeight
    currentKm
    registerDate
    acquisitionDate
    maintenance
    plate
}

class VehicleCheckUp {
    Date
    Place
}

MusgoSublime "1" -- "1..*" FleetManager : has >
MusgoSublime "1" -- "1..*" Vehicle : owns >
Vehicle "1" -- "*" VehicleCheckUp : assigned to <
@enduml